--- a/HBSJ64_HFT_2021221.Client/HBSJ64_HFT_2021221.Client.csproj
+++ b/HBSJ64_HFT_2021221.Client/HBSJ64_HFT_2021221.Client.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HBSJ64_HFT_2021221.Models\HBSJ64_HFT_2021221.Models.csproj" />
   </ItemGroup>
 
