--- a/HBSJ64_HFT_2021221.Endpoint/HBSJ64_HFT_2021221.Endpoint.csproj
+++ b/HBSJ64_HFT_2021221.Endpoint/HBSJ64_HFT_2021221.Endpoint.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HBSJ64_HFT_2021221.Data\HBSJ64_HFT_2021221.Data.csproj" />
     <ProjectReference Include="..\HBSJ64_HFT_2021221.Logic\HBSJ64_HFT_2021221.Logic.csproj" />
     <ProjectReference Include="..\HBSJ64_HFT_2021221.Models\HBSJ64_HFT_2021221.Models.csproj" />
